--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "homepage": "https://damiinho.github.io/Password_generator",
   "name": "password-generator",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +19,9 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
+  "scripts": { 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
